Link touch feedback on mobile fix, secondary backdrop, and more detailed link / button state styling.

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -19,8 +19,7 @@
     font-family: 'Reenie Beanie', cursive;
 }
 
-@media (prefers-color-scheme: dark) {
-    html {
-        background-color: rgb(15, 23, 42);
-    }
+/* Mobile Behavior */
+html {
+    -webkit-tap-highlight-color: transparent;
 }
